--- a/blackjack.html
+++ b/blackjack.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlackJack Web Game</title>
+    <link rel="stylesheet" href="blackjack.css"> 
 </head>
 <body>
     
