--- a/blackjack.html
+++ b/blackjack.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="blackjack.css"> 
 </head>
 <body>
-    
+    <h1>BlackJack</h1>
+    <p>Want to play a round?</p>
+    <p>Cards: </p>
+    <p>Sum: </p>
+    <button>START GAME</button>
+    <button>NEW CARD</button>
+    <script src="blackjack.js"></script>
 </body>
 </html>
