--- a/blackjack.html
+++ b/blackjack.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>BlackJack</h1>
-    <p>Want to play a round?</p>
+    <p id ="message-el">Want to play a round?</p>
     <p>Cards: </p>
     <p>Sum: </p>
     <button>START GAME</button>
