--- a/blackjack.html
+++ b/blackjack.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="blackjack.css"> 
 </head>
 <body>
-    <h1>BlackJack</h1>
-    <p id ="message-el">Want to play a round?</p>
-    <p>Cards: </p>
-    <p>Sum: </p>
-    <button>START GAME</button>
-    <button>NEW CARD</button>
-    <script src="blackjack.js"></script>
+    <div>
+        <h1>BlackJack</h1>
+        <p id ="message-el">Want to play a round?</p>
+        <p>Cards: </p>
+        <p>Sum: </p>
+        <button>START GAME</button>
+        <button>NEW CARD</button>
+        <script src="blackjack.js"></script>
+    </div>
 </body>
 </html>
